--- a/index.html
+++ b/index.html
@@ -39,7 +39,24 @@
         <h2> Cytaty z książki </h2>
         <p> "Człowiek, który nie spędza czasu z rodziną, nigdy nie będzie prawdziwym mężczyzną." </p>
         <p> "Zawsze staraj się mówić cicho i noś przy sobie dużą pałkę." </p>
-        </div>
+
+         <h2> Czy wiesz, że? </h2>
+         <div class="facts">
+             <a href="https://www.emik.com/ojciec-chrzestny-puzo-mario" class="btn" target="_blank"> Kup książkę </a>
+             <a href="https://www.filmweb.pl/film/Ojciec+chrzestny-1972-1035" class="btn" target="_blank"> Zobacz film </a>
+
+             <h2> Podziel się swoją opinią </h2>
+             <from>
+                 <label for="name"> Imię: </label>
+                 <input type="text" id="name" name="name" required>
+
+                 <label for="message"> Twoja opinia: </label>
+                 <textarea id="message" name="message" required> </textarea>
+                 <button type="submit"> Wyślij </button>
+             </from>
+         
+             
+         </div>
 
         <footer>
             <p> Strona stworzona dla miłośników książki - Ojciec Chrzestny </p> 
