--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
          <h2> Czy wiesz, że? </h2>
          <div class="facts">
-             <a href="https://www.emik.com/ojciec-chrzestny-puzo-mario" class="btn" target="_blank"> Kup książkę </a>
+             <a href="https://www.empik.com/ojciec-chrzestny-puzo-mario,p1052723561,ksiazka-p?msockid=09a5eaf6b813654e2539ff68b93b64ff" class="btn" target="_blank"> Kup książkę </a>
              <a href="https://www.filmweb.pl/film/Ojciec+chrzestny-1972-1035" class="btn" target="_blank"> Zobacz film </a>
 
              <h2> Podziel się swoją opinią </h2>
