--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <p> "Człowiek, który nie spędza czasu z rodziną, nigdy nie będzie prawdziwym mężczyzną." </p>
         <p> "Zawsze staraj się mówić cicho i noś przy sobie dużą pałkę." </p>
 
-         <h2> Czy wiesz, że? </h2>
-         <div class="facts">
+         <h2> KUP KSIĄŻKĘ LUB ZOBACZ FILM </h2>
+         <div class="KUP LUB ZOBACZ">
              <a href="https://www.empik.com/ojciec-chrzestny-puzo-mario,p1052723561,ksiazka-p?msockid=09a5eaf6b813654e2539ff68b93b64ff" class="btn" target="_blank"> Kup książkę </a>
              <a href="https://www.filmweb.pl/film/Ojciec+chrzestny-1972-1035" class="btn" target="_blank"> Zobacz film </a>
 
