--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          <div>
              <a href="https://www.empik.com/ojciec-chrzestny-puzo-mario,p1052723561,ksiazka-p?msockid=09a5eaf6b813654e2539ff68b93b64ff" class="btn" target="_blank"> Kup książkę </a>
              <a href="https://www.filmweb.pl/film/Ojciec+chrzestny-1972-1035" class="btn" target="_blank"> Zobacz film </a>
-         </div>div>
+         </div>
              <h2> Podziel się swoją opinią </h2>
              <from>
                  <label for="name"> Imię: </label>
